plugins {
    id 'java-gradle-plugin'
    id 'checkstyle'
    id 'com.github.sherter.google-java-format' version '0.6'
    id 'maven-publish'
}

group 'com.google.cloud.tools'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
}

sourceSets {
    File sharedTestDir = file('src/test-shared/java')
    test {
        java.srcDir sharedTestDir
        resources.srcDir file('src/test-shared/resources')
    }
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integration-test/java')
            srcDir sharedTestDir
        }
        resources.srcDir file('src/integration-test/resources')
    }
}

configurations {
    integrationTestCompile.extendsFrom testCompile
    integrationTestRuntime.extendsFrom testRuntime
}

dependencies {
    compile gradleApi()
    compile 'com.google.http-client:google-http-client:1.23.0'
    compile 'com.google.http-client:google-http-client-jackson2:1.23.0'
    compile 'org.apache.commons:commons-compress:1.15'
    compile 'com.google.guava:guava:23.5-jre'
    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.2'
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-core:2.12.0'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            groupId 'com.google.cloud.tools.jib'
            artifactId 'jib-core'
            version '0.0.1'

            from components.java
        }
    }
    // Publishes to a local repo at "build/repo".
    repositories {
        maven {
            url "$buildDir/repo"
        }
    }
}

task wrapper(type: Wrapper) {
    gradleVersion = "4.3.1"
}

// Integration tests must be run explicitly
task integrationTest(type: Test) {
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
}
integrationTest.dependsOn test

test {
    testLogging {
        showStandardStreams = true
        exceptionFormat = 'full'
    }
}

tasks.withType(Test) {
    reports.html.setDestination file("${reporting.baseDir}/${name}")
}

/* GOOGLE JAVA FORMAT */
check.dependsOn verifyGoogleJavaFormat
/* GOOGLE JAVA FORMAT */

/* CHECKSTYLE */
checkstyle {
    toolVersion = "7.6.1"

    // get the google_checks.xml file from the checkstyle jar and take out the java checks
    def googleChecks = resources.text.fromArchiveEntry(configurations.checkstyle[0], 'google_checks.xml').asString()
    def fileExtensionsBefore = '<property name="fileExtensions" value="java, properties, xml"/>'
    def fileExtensionsAfter = '<property name="fileExtensions" value="properties, xml"/>'
    def googleChecksNoJava = googleChecks.replace(fileExtensionsBefore, fileExtensionsAfter)
    assert !googleChecks.equals(googleChecksNoJava)

    config = resources.text.fromString(googleChecksNoJava)

    maxErrors = 0
    maxWarnings = 0
}
/* CHECKSTYLE */
